# Minecraft-C-

./: .gitignore  CMakeLists.txt  README.md  game.cpp  game.py  main.cpp  main.py  package.json  sandbox_game.exe.spec  setup.py
.github/workflows/: main.yml
include/: player.h  world.h
src/: Sandbox.cpp  Sandbox.h  main.cpp  player.cpp  world.cpp  world.h
